[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/GloriaHallelujah-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/imagenes-acuarela3503-1024x718.png" type="Texture" id=2]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Menu/table.jpg" type="Texture" id=4]
[ext_resource path="res://Menu/notebook.png" type="Texture" id=5]
[ext_resource path="res://Menu/Pen.png" type="Texture" id=6]
[ext_resource path="res://Sprites/light.png" type="Texture" id=7]
[ext_resource path="res://Menu/BoxShadow.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Table" type="TextureRect" parent="."]
margin_left = -9.0
margin_top = -75.0
margin_right = 1312.0
margin_bottom = 715.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pen" type="Sprite" parent="."]
position = Vector2( 971, 362 )
rotation = 1.10479
scale = Vector2( 0.573494, 0.573494 )
texture = ExtResource( 6 )

[node name="Shadow" type="Sprite" parent="Pen"]
modulate = Color( 0, 0, 0, 0.443137 )
show_behind_parent = true
position = Vector2( 37.9493, -20.7835 )
scale = Vector2( 2.54725, 0.28237 )
texture = ExtResource( 7 )

[node name="Notebook" type="TextureRect" parent="."]
margin_left = 180.0
margin_top = 10.0
margin_right = 841.0
margin_bottom = 671.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Notebook"]
margin_left = 162.0
margin_top = 23.0
margin_right = 462.0
margin_bottom = 234.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Sprite" parent="Notebook"]
modulate = Color( 0, 0, 0, 0.443137 )
show_behind_parent = true
position = Vector2( 337, 345.5 )
scale = Vector2( 0.656, 0.665 )
texture = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 306.0
margin_top = 218.0
margin_right = 812.0
margin_bottom = 510.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 506.0
margin_bottom = 94.0
size_flags_vertical = 3
theme = SubResource( 2 )
text = "째Jugar"
flat = true
align = 0
expand_icon = true

[node name="InstructionsButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 74.0
margin_right = 506.0
margin_bottom = 144.0
size_flags_vertical = 3
theme = SubResource( 2 )
text = "째Instrucciones"
flat = true
align = 0
expand_icon = true

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 506.0
margin_bottom = 193.0
size_flags_vertical = 3
theme = SubResource( 2 )
text = "째Opciones"
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 197.0
margin_right = 506.0
margin_bottom = 292.0
size_flags_vertical = 3
theme = SubResource( 2 )
text = "째Salir"
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicMenu" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
